--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             both the HTML and downloadable file
             needs to be present in the same directory -->
         <center>
-         <a href="/Users/lori/Desktop/SITOMIXTAPE/Booba - Geronimo .mp4.zip">
+         <a href="Booba - Geronimo .mp4.zip">
          <button type="button">Download Mixtape</button>
          </a>
         </center>
