--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             both the HTML and downloadable file
             needs to be present in the same directory -->
         <center>
-         <a href="Booba - Geronimo .mp4.zip">
-         <button type="button">Download Mixtape</button>
-         </a>
+         <a href="Booba-Geronimo.zip" download>Download Mixtape </h4> </a>
         </center>
 
    </body>
