--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
          }
       </style>
 
-<body background="mitapesfondo.jpg">
+<body background="mitapesfondo.jpeg">
 
 
 
       <center>
-        <img src="mixtape.jpg" alt="Mia foto" width="400" height="400">
+        <img src="mxitape.jpeg" alt="Mia foto" width="600" height="600">
       </center>
 
 
@@ -27,7 +27,7 @@
             both the HTML and downloadable file
             needs to be present in the same directory -->
         <center>
-         <a href="Booba-Geronimo.zip" download>Download Mixtape </h4> </a>
+         <a href="Booba-Geronimo.zip" download><img src="PNG.png" alt="download" width="400" height="150"> </h4> </a>
         </center>
 
    </body>
